@@ -5113,6 +5113,9 @@ SCIP_RETCODE SCIPtreeBranchVar(
       SCIP_CALL( SCIPnodeCreateChild(&node, blkmem, set, stat, tree, priority, estimate) );
       SCIP_CALL( SCIPnodeAddBoundchg(node, blkmem, set, stat, prob, tree, lp, branchcand, eventqueue,
             var, downub, SCIP_BOUNDTYPE_UPPER, FALSE) );
+      /* output branching bound change to VBC file */
+      SCIP_CALL( SCIPvbcUpdateChild(stat->vbc, stat, node) );
+
       if( downchild != NULL )
          *downchild = node;
    }
@@ -5135,6 +5138,9 @@ SCIP_RETCODE SCIPtreeBranchVar(
          SCIP_CALL( SCIPnodeAddBoundchg(node, blkmem, set, stat, prob, tree, lp, branchcand, eventqueue,
                var, fixval, SCIP_BOUNDTYPE_UPPER, FALSE) );
       }
+      /* output branching bound change to VBC file */
+      SCIP_CALL( SCIPvbcUpdateChild(stat->vbc, stat, node) );
+
       if( eqchild != NULL )
          *eqchild = node;
    }
@@ -5152,6 +5158,9 @@ SCIP_RETCODE SCIPtreeBranchVar(
       SCIP_CALL( SCIPnodeCreateChild(&node, blkmem, set, stat, tree, priority, estimate) );
       SCIP_CALL( SCIPnodeAddBoundchg(node, blkmem, set, stat, prob, tree, lp, branchcand, eventqueue,
             var, uplb, SCIP_BOUNDTYPE_LOWER, FALSE) );
+      /* output branching bound change to VBC file */
+      SCIP_CALL( SCIPvbcUpdateChild(stat->vbc, stat, node) );
+
       if( upchild != NULL )
          *upchild = node;
    }
@@ -5254,6 +5263,8 @@ SCIP_RETCODE SCIPtreeBranchVarHole(
    SCIP_CALL( SCIPnodeCreateChild(&node, blkmem, set, stat, tree, priority, estimate) );
    SCIP_CALL( SCIPnodeAddBoundchg(node, blkmem, set, stat, prob, tree, lp, branchcand, eventqueue,
          var, left, SCIP_BOUNDTYPE_UPPER, FALSE) );
+   /* output branching bound change to VBC file */
+   SCIP_CALL( SCIPvbcUpdateChild(stat->vbc, stat, node) );
 
    if( downchild != NULL )
       *downchild = node;
@@ -5272,6 +5283,8 @@ SCIP_RETCODE SCIPtreeBranchVarHole(
    SCIP_CALL( SCIPnodeCreateChild(&node, blkmem, set, stat, tree, priority, estimate) );
    SCIP_CALL( SCIPnodeAddBoundchg(node, blkmem, set, stat, prob, tree, lp, branchcand, eventqueue,
          var, right, SCIP_BOUNDTYPE_LOWER, FALSE) );
+   /* output branching bound change to VBC file */
+   SCIP_CALL( SCIPvbcUpdateChild(stat->vbc, stat, node) );
 
    if( upchild != NULL )
       *upchild = node;
@@ -5509,6 +5522,8 @@ SCIP_RETCODE SCIPtreeBranchVarNary(
             var, left , SCIP_BOUNDTYPE_LOWER, FALSE) );
          SCIP_CALL( SCIPnodeAddBoundchg(node, blkmem, set, stat, prob, tree, lp, branchcand, eventqueue,
             var, right, SCIP_BOUNDTYPE_UPPER, FALSE) );
+         /* output branching bound change to VBC file */
+         SCIP_CALL( SCIPvbcUpdateChild(stat->vbc, stat, node) );
 
          if( nchildren != NULL )
             ++*nchildren;
@@ -5587,6 +5602,8 @@ SCIP_RETCODE SCIPtreeBranchVarNary(
          }
          SCIP_CALL( SCIPnodeAddBoundchg(node, blkmem, set, stat, prob, tree, lp, branchcand, eventqueue,
             var, left, SCIP_BOUNDTYPE_UPPER, FALSE) );
+         /* output branching bound change to VBC file */
+         SCIP_CALL( SCIPvbcUpdateChild(stat->vbc, stat, node) );
 
          if( nchildren != NULL )
             ++*nchildren;
@@ -5634,6 +5651,8 @@ SCIP_RETCODE SCIPtreeBranchVarNary(
             SCIP_CALL( SCIPnodeAddBoundchg(node, blkmem, set, stat, prob, tree, lp, branchcand, eventqueue,
                var, bnd, SCIP_BOUNDTYPE_UPPER, FALSE) );
          }
+         /* output branching bound change to VBC file */
+         SCIP_CALL( SCIPvbcUpdateChild(stat->vbc, stat, node) );
 
          if( nchildren != NULL )
             ++*nchildren;
