@@ -40,6 +40,7 @@ features:
   the solution value of variables which were fixed to infinite to the smallest feasible value
 - added propagation method to cons_xor relying on Gaussian elimination, which can also produce feasible solutions
 - new branching rule "cloud branching" that considers several alternative LP optima
+- additional vbc output added: branching information is printed earlier and also for nodes which were cut off
 
 performance improvements:
 - conflict consisting of exactly two binary variables will be handled as set-packing constraint instead of an logicor
